<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".MainActivity">

  <TextView
    android:id="@+id/mainActivityProductNameTitleTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="40dp"
    android:layout_marginTop="56dp"
    android:text="@string/main_activity_product_name_title_text_view"
    android:textSize="20sp"
    app:layout_constraintEnd_toStartOf="@+id/mainActivityProductNameEditText"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintHorizontal_chainStyle="packed"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/mainActivityPlaceholderImageView" />

  <ImageView
    android:id="@+id/mainActivityPlaceholderImageView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="40dp"
    android:layout_marginTop="64dp"
    android:layout_marginEnd="40dp"
    android:contentDescription="@string/main_activity_placeholder_image"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.497"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/ic_launcher_background"
    tools:srcCompat="@tools:sample/avatars" />

  <Button
    android:id="@+id/mainActivitySubmitButton"
    android:layout_width="128dp"
    android:layout_height="64dp"
    android:layout_marginTop="64dp"
    android:contentDescription="@string/main_activity_submit_button"
    android:text="@string/main_activity_submit_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/mainActivityProductNameTitleTextView" />

  <Button
    android:id="@+id/mainActivityGoToOrderForm"
    android:layout_width="128dp"
    android:layout_height="64dp"
    android:layout_marginTop="24dp"
    android:contentDescription="@string/main_activity_go_to_order_form_button"
    android:text="@string/main_activity_go_to_order_form_button"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.498"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/mainActivitySubmitButton" />

  <EditText
    android:id="@+id/mainActivityProductNameEditText"
    android:layout_width="wrap_content"
    android:layout_height="48dp"
    android:layout_marginEnd="40dp"
    android:ems="10"
    android:hint="@string/main_activity_product_name_edit_text_hint"
    android:importantForAutofill="no"
    android:inputType="textPersonName"
    android:textColorHint="#78909C"
    android:textSize="20sp"
    app:layout_constraintBottom_toBottomOf="@+id/mainActivityProductNameTitleTextView"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toEndOf="@+id/mainActivityProductNameTitleTextView"
    app:layout_constraintTop_toTopOf="@+id/mainActivityProductNameTitleTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>
